updated hobby section

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,7 @@
   --color-text: #eceff4;
   --color-primary: #5c85d2;
   --color-secondary: #26232d;
-  --color-accent: #56b4c2;
+  --color-accent: #64c7d9;
 }
 
 @theme inline {
